--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.11.16</version>
+        </dependency>
 
 
 
